--- a/docs/hyparticle.bib
+++ b/docs/hyparticle.bib
@@ -8,6 +8,14 @@ pages="5298--5315",
 year="2009"
 }
 
+@article{fvweno,
+  author = "Y. Xia and X. Liu and H. Luo",
+  title = "A finite volume method based on a {WENO} reconstruction for compressible flows on hybrid grids",
+  journal = "52nd Aerospace Sciences Meeting, AIAA SciTech Forum",
+  volume = "AIAA 2014-0939",
+  year = "2014"
+}
+
 @article{julia,
   author    = {Jeff Bezanson and
                Stefan Karpinski and
